2009-06-19  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* Makefile: Add targets for handling the cnvts
	and hook  them in except for all- and install-target
	- since the c-nvts do not build yet.

2009-06-19  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Move the remaining C-NVTs from openvas-plugins
	module here.
	This is part of Change Request #32
	(http://www.openvas.org/openvas-cr-32.html,
	"Discontinuing the tarball releases of openvas-plugins")

	* cnvts/3com_hub/3com_hub.c, cnvts/3com_hub/Makefile,
	cnvts/find_service/find_service.c, cnvts/find_service/Makefile,
	cnvts/install_plug, cnvts/make_world,
	cnvts/openvas_tcp_scanner/Makefile,
	cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c,
	cnvts/ssl_ciphers/Makefile, cnvts/ssl_ciphers/ssl_ciphers.c,
	cnvts/synscan/Makefile, cnvts/synscan/synscan.c:
	New. Copied over from openvas-plugins/plugins/

	* MANIFEST: Updated

2009-06-10  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Move the sync-script for the OpenVAS NVT Feed from
	openvas-plugins module here.
	This is part of Change Request #32
	(http://www.openvas.org/openvas-cr-32.html,
	"Discontinuing the tarball releases of openvas-plugins")

	* openvas-nvt-sync.in: New. Moved here from
	openvas-plugins module.

	* configure.in, Makefile: Added handling for openvas-nvt-sync.

	* configure: Updatd.

	* MANIFEST: Updated.

2009-06-03  Michael Wiegand <michael.wiegand@intevation.de>

	Post branch version bump.

	* VERSION: Set to 2.1.0.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-06-03  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* VERSION: Set to 2.0.3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-06-03  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-server 2.0.2 release.

	* VERSION: Set to 2.0.2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.
